# server/Api.Websocket/EventHandlers/ServerEventDtos/ServerSendsErrorMessage.cs
@@ -5,7 +5,8 @@ namespace Api.Websocket.EventHandlers.ServerEventDtos;
 
 public class ServerSendsErrorMessage : BaseDto
 {
-    [Required] public string Error { get; set; } = null!;
+    public string Error { get; set; } = null!;
 
-    [Required] public string RequestId { get; set; } = null!;
+    public string RequestId { get; set; } = null!;
+    public string Message { get; set; }
 }
